[package]
name = "rust-tui"
version = "0.1.0"
edition = "2021"
authors = ["Michael Hall <michael@rubberduck-labs.com>"]
license = "MIT"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
aws-sdk-dynamodb = "1.3.0"
aws-config = "1.3.0"
aws-credential-types = "1.2"
aws-runtime = "1.3"
aws-smithy-types = "1.3"
tokio = { version = "1.0", features = ["full"] }